# KSync

./: .CMakeLists.txt.swp  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
client/: .CMakeLists.txt.swp  CMakeLists.txt
client/core/: CMakeLists.txt
client/core/inc/ksync/client/: client_state.h  client_utilities.h
client/core/src/: client_state.cxx  client_utilities.cxx
client/inc/ksync/: .client.h.swp  client.h
client/ncurses/: CMakeLists.txt
client/ncurses/src/: ncurses_client.cpp
client/plain/: CMakeLists.txt
client/plain/src/: client.cpp
client/src/: .client.cpp.swp  client.cpp  ncurses_client.cpp  ncurses_example.cpp
cmake/: FindArgParse.cmake
comm/: CMakeLists.txt
comm/core/: CMakeLists.txt
comm/core/inc/ksync/comm/: factory.h  interface.h  object.h
comm/core/src/: interface.cxx  object.cxx
comm/nanomsg/: CMakeLists.txt
comm/nanomsg/inc/ksync/comm/nanomsg/: nanomsg_comm_system.h
comm/nanomsg/src/: nanomsg_comm_system.cxx
comm/zeromq/: CMakeLists.txt
comm/zeromq/inc/ksync/comm/zeromq/: zeromq_comm_system.h
comm/zeromq/src/: zeromq_comm_system.cxx
core/: CMakeLists.txt
core/inc/: thread_utilities.h
core/inc/ksync/: client_communicator.h  common_ops.h  ksync_exception.h  logging.h  pstreams_command_system.h  thread_utilities.h  utilities.h
core/src/: client_communicator.cxx  comm_system_factory.cxx  command_system_interface.cxx  common_ops.cxx  logging.cxx  messages.cxx  utilities.cxx
libksync/: CMakeLists.txt
libksync/inc/ksync/: comm_system_factory.h  comm_system_interface.h  comm_system_object.h  command_system_interface.h  ksync_exception.h  logging.h  messages.h  optparse.h  pstreams_command_system.h  socket_ops.h  types.h  utilities.h
libksync/src/: comm_system_interface.cxx  comm_system_object.cxx  command_system_interface.cxx  logging.cxx  messages.cxx  optparse.cxx  pstreams_command_system.cxx  socket_ops.cxx  utilities.cxx
messages/: .CMakeLists.txt.swp  CMakeLists.txt
messages/inc/ksync/: .messages.h.swp  messages.h
messages/src/: .messages.cxx.swp  messages.cxx
nanomsg/: CMakeLists.txt
nanomsg/inc/ksync_nanomsg/: nanomsg_comm_system.h
nanomsg/src/: nanomsg_comm_system.cxx
server/: .CMakeLists.txt.swp  CMakeLists.txt
server/inc/ksync/: .server.h.swp  gateway_thread.h  master_thread.h  server.h
server/src/: .server.cpp.swp  gateway_thread.cpp  master_thread.cpp  server.cpp
tests/: CMakeLists.txt  string-test.cpp
ui/ncurses/: CMakeLists.txt
ui/ncurses/inc/ksync/ui/ncurses/: interface.h  menu.h  window.h
ui/ncurses/src/: interface.cxx  menu.cxx  window.cxx
zeromq/: CMakeLists.txt
zeromq/inc/ksync_zeromq/: zeromq_comm_system.h
zeromq/src/: zeromq_comm_system.cxx
