find_package(G3LOG REQUIRED)
find_package(PkgConfig)
pkg_search_module(ArgParse REQUIRED ArgParse)
pkg_search_module(nanomsg REQUIRED nanomsg)
pkg_search_module(libzmq REQUIRED libzmq)
pkg_search_module(ncursesw REQUIRED ncursesw)
pkg_search_module(panelw REQUIRED panelw)
pkg_search_module(menuw REQUIRED menuw)
pkg_search_module(formw REQUIRED formw)

include_directories(inc)
include_directories(${core_INCLUDE_DIR})
include_directories(${comm_core_INCLUDE_DIR})
include_directories(${comm_zeromq_INCLUDE_DIR})
include_directories(${comm_nanomsg_INCLUDE_DIR})
include_directories(${ui_ncurses_INCLUDE_DIR})
include_directories(${client_core_INCLUDE_DIR})
include_directories(${G3LOG_INCLUDE_DIRS})
include_directories(${ArgParse_INCLUDEDIR})
include_directories(${panelw_INCLUDE_DIR})
include_directories(${menuw_INCLUDE_DIR})
include_directories(${formw_INCLUDE_DIR})
include_directories(${ncursesw_INCLUDE_DIR})

add_executable(ksync_client_ncurses src/ncurses_client.cpp)
add_definitions(-pthread)

target_link_libraries(ksync_client_ncurses ksync)
target_link_libraries(ksync_client_ncurses ksync_comm_core)
target_link_libraries(ksync_client_ncurses ksync_comm_zeromq)
target_link_libraries(ksync_client_ncurses ksync_comm_nanomsg)
target_link_libraries(ksync_client_ncurses ksync_ui_ncurses)
target_link_libraries(ksync_client_ncurses ksync_client_core)
target_link_libraries(ksync_client_ncurses ${G3LOG_LIBRARIES})
target_link_libraries(ksync_client_ncurses ${ArgParse_LDFLAGS})
target_link_libraries(ksync_client_ncurses ${libzmq_LDFLAGS})
target_link_libraries(ksync_client_ncurses ${nanomsg_LDFLAGS})
target_link_libraries(ksync_client_ncurses ${panelw_LDFLAGS})
target_link_libraries(ksync_client_ncurses ${menuw_LDFLAGS})
target_link_libraries(ksync_client_ncurses ${formw_LDFLAGS})
target_link_libraries(ksync_client_ncurses ${ncursesw_LDFLAGS})
target_link_libraries(ksync_client_ncurses -lpthread)

install (TARGETS ksync_client_ncurses DESTINATION bin)
